<resources>
    <string name="app_name">FinalProject</string>


    <string name="title_text">Place Tracker</string>

    <!-- Sign-in status messages -->
    <string name="AddPlaces">Add Place</string>
    <string name="ViewPlaces">View Places</string>
    <string name="ViewAccount">View Account</string>

    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!--Strings for AddPlaces-->
    <string name="add_title_text">Add Place</string>
    <string-array name="Categories">
        <item>Choose a Category</item>
        <item>Store</item>
        <item>Entertainment</item>
        <item>Park/Trail</item>
        <item>Monument/LandMark</item>
        <item>Nature</item>
        <item>residential</item>

    </string-array>
    <string name="Name">Place Name (Optional)</string>
    <string name="Address">Address</string>
    <string name="FetchPlace">Current Location</string>
    <string name="rating">Places Category</string>
    <string name="Comments">Place Comments</string>
    <string name="addPlace">Add Place</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">897309033315-6dhahckufihei4pg28sq3ec5koelih61.apps.googleusercontent.com</string>


    <string name="enterUserName">Enter User Name</string>

    <!--Main Menu -->
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="get_address">get address</string>
    <string name="location_updated_message">Location updated</string>


    <string name="action_settings">Settings</string>
    <string name="runtime_permissions_txt">Please enable location permissions from app settings.</string>


    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
</resources>

